// Okomo — Visão Global do Modelo de Dados (DBML)
// Visualize em: https://dbdiagram.io/
//
// Este arquivo descreve a visão global e consolidada do modelo de dados.
// Inclui representação de alto nível de todos os Bounded Contexts:
// Identity, Catalog, Inventory, Orders, Checkout, Payments, Shipping, Promotions
//
// Nota: este diagrama fornece uma visão arquitetônica consolidada.
// Modelos lógicos detalhados de cada bounded context ficam em arquivos separados.

// ============================================================
// IDENTITY CONTEXT
// ============================================================

Table users {
  id uuid [pk]
  name varchar
  email varchar [unique, not null]
  password_digest varchar [not null]
  status varchar [not null, default: 'pending_confirmation']
  email_confirmed_at timestamp
  last_login_at timestamp
  terms_accepted_at timestamp
  privacy_policy_accepted_at timestamp
  consent_version varchar
  consent_ip_address inet
  consent_user_agent text
  blocked_at timestamp
  deactivated_at timestamp
  anonymized_at timestamp
  deleted_at timestamp
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table roles {
  id uuid [pk]
  name varchar [unique, not null]
  description text
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table user_roles {
  id uuid [pk]
  user_id uuid [not null]
  role_id uuid [not null]
  granted_at timestamp [not null]
  revoked_at timestamp
  granted_by_user_id uuid
  revoked_by_user_id uuid
  reason text
  created_at timestamp [not null]
  updated_at timestamp [not null]

  indexes {
    (user_id, role_id)
  }
}

Table seller_profiles {
  id uuid [pk]
  user_id uuid [unique, not null]
  display_name varchar [not null]
  status varchar [not null, default: 'pending_review']
  requested_at timestamp [not null]
  reviewed_at timestamp
  reviewed_by_user_id uuid
  approved_at timestamp
  rejected_at timestamp
  rejection_reason text
  suspended_at timestamp
  suspension_reason text
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

// ============================================================
// CATALOG CONTEXT
// ============================================================

Table products {
  id uuid [pk]
  seller_profile_id uuid [not null]
  name varchar [not null]
  description text
  status varchar [not null, default: 'draft']
  created_at timestamp [not null]
  updated_at timestamp [not null]

  indexes {
    seller_profile_id
  }
}

Table variants {
  id uuid [pk]
  product_id uuid [not null]
  name varchar [not null]
  sku varchar
  price decimal [not null]
  status varchar [not null, default: 'draft']
  created_at timestamp [not null]
  updated_at timestamp [not null]

  indexes {
    product_id
    sku [unique]
  }
}

// ============================================================
// INVENTORY CONTEXT
// ============================================================

Table inventories {
  id uuid [pk]
  variant_id uuid [unique, not null]
  quantity integer [not null, default: 0]
  reserved_quantity integer [not null, default: 0]
  updated_at timestamp [not null]

  indexes {
    variant_id
  }
}

Table inventory_reservations {
  id uuid [pk]
  inventory_id uuid [not null]
  order_item_id uuid
  quantity integer [not null]
  status varchar [not null, default: 'pending']
  expires_at timestamp [not null]
  released_at timestamp
  created_at timestamp [not null]
  updated_at timestamp [not null]

  indexes {
    inventory_id
    order_item_id
    status
    expires_at
  }
}

// ============================================================
// ORDERS CONTEXT
// ============================================================

Table orders {
  id uuid [pk]
  user_id uuid [not null]
  status varchar [not null, default: 'pending']
  total_amount decimal [not null]
  discount_amount decimal [default: 0]
  coupon_id uuid
  created_at timestamp [not null]
  updated_at timestamp [not null]

  indexes {
    user_id
    status
    coupon_id
    created_at
  }
}

Table order_items {
  id uuid [pk]
  order_id uuid [not null]
  variant_id uuid [not null]
  quantity integer [not null]
  unit_price decimal [not null]
  line_total decimal [not null]
  created_at timestamp [not null]

  indexes {
    order_id
    variant_id
  }
}

// ============================================================
// CHECKOUT CONTEXT
// ============================================================

Table checkout_sessions {
  id uuid [pk]
  order_id uuid [unique, not null]
  status varchar [not null, default: 'pending']
  created_at timestamp [not null]
  updated_at timestamp [not null]

  indexes {
    order_id
    status
  }
}

// ============================================================
// PAYMENTS CONTEXT
// ============================================================

Table payments {
  id uuid [pk]
  order_id uuid [not null]
  amount decimal [not null]
  status varchar [not null, default: 'pending']
  payment_method varchar
  gateway_transaction_id varchar
  created_at timestamp [not null]
  updated_at timestamp [not null]

  indexes {
    order_id
    status
    gateway_transaction_id
  }
}

// ============================================================
// SHIPPING CONTEXT
// ============================================================

Table shipments {
  id uuid [pk]
  order_id uuid [unique, not null]
  tracking_number varchar
  status varchar [not null, default: 'pending']
  shipping_method varchar
  estimated_delivery_at timestamp
  delivered_at timestamp
  created_at timestamp [not null]
  updated_at timestamp [not null]

  indexes {
    order_id
    status
    tracking_number
  }
}

// ============================================================
// PROMOTIONS CONTEXT
// ============================================================

Table coupons {
  id uuid [pk]
  created_by_id uuid [not null]
  code varchar [unique, not null]
  discount_value decimal [not null]
  discount_type varchar [not null]
  status varchar [not null, default: 'active']
  valid_from timestamp
  valid_until timestamp
  max_uses integer
  current_uses integer [default: 0]
  created_at timestamp [not null]
  updated_at timestamp [not null]

  indexes {
    code
    status
    valid_until
  }
}

Table coupon_redemptions {
  id uuid [pk]
  coupon_id uuid [not null]
  user_id uuid [not null]
  order_id uuid [not null]
  redeemed_at timestamp [not null]
  created_at timestamp [not null]

  indexes {
    coupon_id
    user_id
    order_id
  }
}

// ============================================================
// FOREIGN KEY RELATIONSHIPS
// ============================================================

// Identity relationships
Ref: users.id < user_roles.user_id [
  delete: restrict
]

Ref: roles.id < user_roles.role_id [
  delete: restrict
]

Ref: users.id - seller_profiles.user_id [
  delete: restrict
]

Ref: users.id < seller_profiles.reviewed_by_user_id [
  delete: set null
]

// Catalog relationships
Ref: seller_profiles.id < products.seller_profile_id [
  delete: cascade
]

Ref: products.id < variants.product_id [
  delete: cascade
]

// Inventory relationships
Ref: variants.id - inventories.variant_id [
  delete: cascade
]

Ref: inventories.id < inventory_reservations.inventory_id [
  delete: cascade
]

// Orders relationships
Ref: users.id < orders.user_id [
  delete: restrict
]

Ref: orders.id < order_items.order_id [
  delete: cascade
]

Ref: variants.id < order_items.variant_id [
  delete: restrict
]

Ref: coupons.id < orders.coupon_id [
  delete: set null
]

// Checkout relationships
Ref: orders.id - checkout_sessions.order_id [
  delete: cascade
]

// Payments relationships
Ref: orders.id < payments.order_id [
  delete: restrict
]

// Shipping relationships
Ref: orders.id - shipments.order_id [
  delete: cascade
]

// Promotions relationships
Ref: users.id < coupons.created_by_id [
  delete: restrict
]

Ref: coupons.id < coupon_redemptions.coupon_id [
  delete: cascade
]

Ref: users.id < coupon_redemptions.user_id [
  delete: restrict
]

Ref: orders.id < coupon_redemptions.order_id [
  delete: restrict
]
